tests/invalid-semantic/56334_wrongTypeFunction/wrongTypeFunction.agu
-- Author: fc56334, Goncalo Lopes

let max(x,y) : (Int,Int) -> Int =
    let max : Int = 0;
    if x <= y then (
        max = y
    else
        max = x
    );
    max

let _ : Int =
    max(2,"3")
